[fix] Fix function lint

--- a/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
+++ b/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
@@ -920,7 +920,7 @@
     "            ### Optimalization\n",
     "            # build neurel network structure and get their predictions and loss\n",
     "            self.y_, self.loss = self.structure(features=self.train_features,\n",
-    "                                                         labels=self.train_labels)\n",
+    "                                                labels=self.train_labels)\n",
     "            # define training operation\n",
     "            self.train_op = tf.train.GradientDescentOptimizer(learning_rate).minimize(self.loss)\n",
     "\n",
@@ -928,7 +928,7 @@
     "            self.new_features = tf.placeholder(tf.float32, shape=(None, self.n_features))\n",
     "            self.new_labels = tf.placeholder(tf.int32, shape=(None, self.n_labels))\n",
     "            self.new_y_, self.new_loss = self.structure(features=self.new_features,\n",
-    "                                                                       labels=self.new_labels)\n",
+    "                                                        labels=self.new_labels)\n",
     "\n",
     "            ### Initialization\n",
     "            self.init_op = tf.global_variables_initializer()\n",
@@ -946,7 +946,7 @@
     "\n",
     "        ### Structure\n",
     "        # one fully connected layer\n",
-    "        logits = self.getDenseLayer(features, self.weights['fc1'], self.biases['fc1'])\n",
+    "        logits = self.get_dense_layer(features, self.weights['fc1'], self.biases['fc1'])\n",
     "\n",
     "        # predictions\n",
     "        y_ = tf.nn.softmax(logits)\n",
@@ -957,7 +957,7 @@
     "\n",
     "        return (y_, loss)\n",
     "\n",
-    "    def getDenseLayer(self, input_layer, weight, bias, activation=None):\n",
+    "    def get_dense_layer(self, input_layer, weight, bias, activation=None):\n",
     "        # fully connected layer\n",
     "        x = tf.add(tf.matmul(input_layer, weight), bias)\n",
     "        if activation:\n",
