--- a/tutorial/02_Build_First_DNN.ipynb
+++ b/tutorial/02_Build_First_DNN.ipynb
@@ -429,8 +429,8 @@
     "class DNNLogisticClassification:\n",
     "\n",
     "    def __init__(self, n_features, n_labels,\n",
-    "                     learning_rate=0.5, n_hidden=1000, activation=tf.nn.relu,\n",
-    "                     dropout_ratio=0.5, alpha=0.0):\n",
+    "                 learning_rate=0.5, n_hidden=1000, activation=tf.nn.relu,\n",
+    "                 dropout_ratio=0.5, alpha=0.0):\n",
     "\n",
     "        self.n_features = n_features\n",
     "        self.n_labels = n_labels\n",
@@ -440,7 +440,7 @@
     "\n",
     "        self.graph = tf.Graph()  # initialize new graph\n",
     "        self.build(learning_rate, n_hidden, activation,\n",
-    "                     dropout_ratio, alpha)  # building graph\n",
+    "                   dropout_ratio, alpha)  # building graph\n",
     "        self.sess = tf.Session(graph=self.graph)  # create session by the graph\n",
     "\n",
     "    def build(self, learning_rate, n_hidden, activation, dropout_ratio, alpha):\n",
@@ -453,11 +453,11 @@
     "            ### Optimalization\n",
     "            # build neurel network structure and get their predictions and loss\n",
     "            self.y_, self.original_loss = self.structure(features=self.train_features,\n",
-    "                                                                     labels=self.train_labels,\n",
-    "                                                                     n_hidden=n_hidden,\n",
-    "                                                                     activation=activation,\n",
-    "                                                                     dropout_ratio=dropout_ratio,\n",
-    "                                                                     train=True)\n",
+    "                                                         labels=self.train_labels,\n",
+    "                                                         n_hidden=n_hidden,\n",
+    "                                                         activation=activation,\n",
+    "                                                         dropout_ratio=dropout_ratio,\n",
+    "                                                         train=True)\n",
     "            # regularization loss\n",
     "            self.regularization = \\\n",
     "                tf.reduce_sum([tf.nn.l2_loss(w) for w in self.weights.values()]) \\\n",
@@ -474,9 +474,9 @@
     "            self.new_features = tf.placeholder(tf.float32, shape=(None, self.n_features))\n",
     "            self.new_labels = tf.placeholder(tf.int32, shape=(None, self.n_labels))\n",
     "            self.new_y_, self.new_original_loss = self.structure(features=self.new_features,\n",
-    "                                                                                   labels=self.new_labels,\n",
-    "                                                                                   n_hidden=n_hidden,\n",
-    "                                                                                   activation=activation)\n",
+    "                                                                 labels=self.new_labels,\n",
+    "                                                                 n_hidden=n_hidden,\n",
+    "                                                                 activation=activation)\n",
     "            self.new_loss = self.new_original_loss + alpha * self.regularization\n",
     "\n",
     "            ### Initialization\n",
@@ -496,22 +496,22 @@
     "            }\n",
     "        ### Structure\n",
     "        # layer 1\n",
-    "        fc1 = self.getDenseLayer(features, self.weights['fc1'],\n",
-    "                                           self.biases['fc1'], activation=activation)\n",
+    "        fc1 = self.get_dense_layer(features, self.weights['fc1'],\n",
+    "                                   self.biases['fc1'], activation=activation)\n",
     "        if train:\n",
     "            fc1 = tf.nn.dropout(fc1, keep_prob=1-dropout_ratio)\n",
     "\n",
     "        # layer 2\n",
-    "        logits = self.getDenseLayer(fc1, self.weights['fc2'], self.biases['fc2'])\n",
+    "        logits = self.get_dense_layer(fc1, self.weights['fc2'], self.biases['fc2'])\n",
     "\n",
     "        y_ = tf.nn.softmax(logits)\n",
     "\n",
     "        loss = tf.reduce_mean(\n",
-    "            tf.nn.softmax_cross_entropy_with_logits(labels=labels, logits=logits))\n",
+    "                 tf.nn.softmax_cross_entropy_with_logits(labels=labels, logits=logits))\n",
     "\n",
     "        return (y_, loss)\n",
     "\n",
-    "    def getDenseLayer(self, input_layer, weight, bias, activation=None):\n",
+    "    def get_dense_layer(self, input_layer, weight, bias, activation=None):\n",
     "        # fully connected layer\n",
     "        x = tf.add(tf.matmul(input_layer, weight), bias)\n",
     "        if activation:\n",
