--- a/tutorial/03_Build_CNN.ipynb
+++ b/tutorial/03_Build_CNN.ipynb
@@ -430,33 +430,33 @@
     "            }\n",
     "\n",
     "        ### Structure\n",
-    "        conv1 = self.getConv2DLayer(pictures,\n",
-    "                                    self.weights['conv1'], self.biases['conv1'],\n",
-    "                                    activation=tf.nn.relu)\n",
+    "        conv1 = self.get_conv_2d_layer(pictures,\n",
+    "                                       self.weights['conv1'], self.biases['conv1'],\n",
+    "                                       activation=tf.nn.relu)\n",
     "        pool2 = tf.nn.max_pool(conv1,\n",
     "                               ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
-    "        conv3 = self.getConv2DLayer(pool2,\n",
-    "                                    self.weights['conv3'], self.biases['conv3'],\n",
-    "                                    activation=tf.nn.relu)\n",
+    "        conv3 = self.get_conv_2d_layer(pool2,\n",
+    "                                       self.weights['conv3'], self.biases['conv3'],\n",
+    "                                       activation=tf.nn.relu)\n",
     "        pool4 = tf.nn.max_pool(conv3,\n",
     "                               ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
-    "        fatten5 = self.getFlattenLayer(pool4)\n",
+    "        fatten5 = self.get_flatten_layer(pool4)\n",
     "\n",
     "        if train:\n",
     "            fatten5 = tf.nn.dropout(fatten5, keep_prob=1-dropout_ratio[0])\n",
     "\n",
-    "        fc6 = self.getDenseLayer(fatten5,\n",
-    "                                 self.weights['fc6'], self.biases['fc6'],\n",
-    "                                 activation=tf.nn.relu)\n",
+    "        fc6 = self.get_dense_layer(fatten5,\n",
+    "                                   self.weights['fc6'], self.biases['fc6'],\n",
+    "                                   activation=tf.nn.relu)\n",
     "\n",
     "        if train:\n",
     "            fc6 = tf.nn.dropout(fc6, keep_prob=1-dropout_ratio[1])\n",
     "\n",
-    "        fc7 = self.getDenseLayer(fc6,\n",
-    "                                 self.weights['fc7'], self.biases['fc7'],\n",
-    "                                 activation=tf.nn.relu)\n",
+    "        fc7 = self.get_dense_layer(fc6,\n",
+    "                                   self.weights['fc7'], self.biases['fc7'],\n",
+    "                                   activation=tf.nn.relu)\n",
     "\n",
-    "        logits = self.getDenseLayer(fc7, self.weights['fc8'], self.biases['fc8'])\n",
+    "        logits = self.get_dense_layer(fc7, self.weights['fc8'], self.biases['fc8'])\n",
     "\n",
     "        y_ = tf.nn.softmax(logits)\n",
     "        loss = tf.reduce_mean(\n",
@@ -465,15 +465,15 @@
     "\n",
     "        return (y_, loss)\n",
     "\n",
-    "    def getDenseLayer(self, input_layer, weight, bias, activation=None):\n",
+    "    def get_dense_layer(self, input_layer, weight, bias, activation=None):\n",
     "        x = tf.add(tf.matmul(input_layer, weight), bias)\n",
     "        if activation:\n",
     "            x = activation(x)\n",
     "        return x\n",
     "\n",
-    "    def getConv2DLayer(self, input_layer,\n",
-    "                       weight, bias,\n",
-    "                       strides=(1, 1), padding='VALID', activation=None):\n",
+    "    def get_conv_2d_layer(self, input_layer,\n",
+    "                          weight, bias,\n",
+    "                          strides=(1, 1), padding='VALID', activation=None):\n",
     "        x = tf.add(\n",
     "              tf.nn.conv2d(input_layer,\n",
     "                           weight,\n",
@@ -483,7 +483,7 @@
     "            x = activation(x)\n",
     "        return x\n",
     "\n",
-    "    def getFlattenLayer(self, input_layer):\n",
+    "    def get_flatten_layer(self, input_layer):\n",
     "        shape = input_layer.get_shape().as_list()\n",
     "        n = 1\n",
     "        for s in shape[1:]:\n",
