--- a/tutorial/04_Autoencoder.ipynb
+++ b/tutorial/04_Autoencoder.ipynb
@@ -163,39 +163,39 @@
     "        ### Structure\n",
     "        activation = tf.nn.relu\n",
     "\n",
-    "        encoder = self.getDenseLayer(features,\n",
-    "                                     self.weights['encode1'],\n",
-    "                                     self.biases['encode1'],\n",
-    "                                     activation=activation)\n",
+    "        encoder = self.get_dense_layer(features,\n",
+    "                                       self.weights['encode1'],\n",
+    "                                       self.biases['encode1'],\n",
+    "                                       activation=activation)\n",
     "\n",
     "        for i in range(1, len(n_hidden)-1):\n",
-    "            encoder = self.getDenseLayer(\n",
+    "            encoder = self.get_dense_layer(\n",
     "                encoder,\n",
     "                self.weights['encode{}'.format(i+1)],\n",
     "                self.biases['encode{}'.format(i+1)],\n",
     "                activation=activation,\n",
     "            )\n",
     "\n",
-    "        encoder = self.getDenseLayer(\n",
+    "        encoder = self.get_dense_layer(\n",
     "            encoder,\n",
     "            self.weights['encode{}'.format(len(n_hidden))],\n",
     "            self.biases['encode{}'.format(len(n_hidden))],\n",
     "        )\n",
     "\n",
-    "        decoder = self.getDenseLayer(encoder,\n",
-    "                                     self.weights['decode1'],\n",
-    "                                     self.biases['decode1'],\n",
-    "                                     activation=activation)\n",
+    "        decoder = self.get_dense_layer(encoder,\n",
+    "                                       self.weights['decode1'],\n",
+    "                                       self.biases['decode1'],\n",
+    "                                       activation=activation)\n",
     "\n",
     "        for i in range(1, len(n_hidden)-1):\n",
-    "            decoder = self.getDenseLayer(\n",
+    "            decoder = self.get_dense_layer(\n",
     "                decoder,\n",
     "                self.weights['decode{}'.format(i+1)],\n",
     "                self.biases['decode{}'.format(i+1)],\n",
     "                activation=activation,\n",
     "            )\n",
     "\n",
-    "        y_ = self.getDenseLayer(\n",
+    "        y_ = self.get_dense_layer(\n",
     "            decoder,\n",
     "            self.weights['decode{}'.format(len(n_hidden))],\n",
     "            self.biases['decode{}'.format(len(n_hidden))],\n",
@@ -206,7 +206,7 @@
     "\n",
     "        return (y_, loss, encoder)\n",
     "\n",
-    "    def getDenseLayer(self, input_layer, weight, bias, activation=None):\n",
+    "    def get_dense_layer(self, input_layer, weight, bias, activation=None):\n",
     "        x = tf.add(tf.matmul(input_layer, weight), bias)\n",
     "        if activation:\n",
     "            x = activation(x)\n",
